satupharmatechCloneUsingCSS/index.css
*{
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins'
}

/* for fonts */
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


header{
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 1px solid rgb(217, 217, 217);
    font-size: 20px;
    padding: 1rem 3rem;
}
nav ul{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}
nav ul li{
    list-style-type: none;
    cursor: pointer;
}

 span{
    color: rgb(20 184 166);
}
header button , .hero button , form button{
    font-size: 20px;
    padding: 0.5rem 1rem;
    border: none;
    background-color:rgb(20 184 166);
    color: white;
    border-radius: 5px;
}

/* For transition effect */
button{
    transition: all 0.5s;
    cursor: pointer;
}
button:hover{
    background-color: #fff;
    color:rgb(20 184 166) ;
    border: 1px solid black;
}

#hamburger{
    display: none;
}

.sectionOneWrapper{
    background-image: url(/images/HeroImage.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: right;
}

.hero h1{
    font-size: 3rem;
    line-height: 4rem;
}
.hero p {
    font-weight: 300;
    max-width: 800px;
    font-size: 18px;
    margin-top: 1rem;
}
.hero{
    padding: 5rem 3rem 0 3rem;
    text-align: start;
}
.line{
    border: 2px solid rgb(79 181 185 );
    width: 3rem;   
}
.lineWrapper{
    height: 3rem;
    display: flex;
    align-items: center;
}

.hero button{
    margin-top: 2rem;
    margin-bottom: 5rem;
}

#floatingBlock{
    display: flex;
    justify-content: center;
    gap: 1.2rem;
    height: 5rem;
    border-radius: 10px;
    align-items: center;
    width: 80vw;
    position: absolute;
    bottom: 10px;
    bottom: -2.5rem;
    right: 10vw;
    background-color: rgb(255 247 227);
    min-height: 7rem;
    box-shadow: 0px 0px 11px 0px #909090;
    font-size: 20px;
    font-style: italic;
}

#sectionOne{
    position: relative;
}
#sectionTwo{
    margin: 10rem 3rem 0 3rem;
}

#sectionTwo h2{
    font-size: 30px;
}

#sectionTwo p{
    color: rgb(75 85 99);
    margin-top: 1rem;
    max-width: 800px;
}

#sectionThree h2{
    margin-top: 3rem;
}

.sectionThreeBoxWrapper{
    margin-top: 2rem;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2rem;
}

#sectionThree{
    padding:  0 3rem;
}

.sectionThreeBox{
    border: 2px solid rgb(194, 194, 194);
    padding: 1rem;
    border-radius: 10px;
    height: 14rem;
    overflow: hidden;
}

.sectionThreeBox h3{
    font-size: 24px;
    margin-bottom: 5rem;
    margin-top: 3rem;
}
.sectionThreeBox .lineWrapper{
    height: 3px;
}

.sectionThreeBoxInvisible{
    border: 1px solid white;
}

#sectionFour{
    padding: 0 3rem;
    margin-top: 4rem;
}

#sectionFour h2{
    margin-bottom: 2rem;
}
.card{
    display: flex;
    margin-bottom: 3rem;
    align-items: center;
}
.card div{
    padding-left: 10px;
}
.card div h3{
    font-size: 24px;
    color: rgb(37, 144, 148);
}
.card div p{
    font-size: 16px;
    margin-top: 20px;
}

#sectionFourCardOne img{
    width: 65%;
    height: fit-content;
    border-radius: 10px;
}

#cardTwo {
    text-align: right;
    
}
#cardTwo p , #cardTwo h2{
    padding-right:20px ;
}

#sectionFive{
    padding: 0 3rem;
}
.sectionFiveBox:hover{
    transform: scale(1.02);
}
#sectionFive h2{
    margin: 2rem 0;
    font-size: 30px;
    font-weight: 600;
}

#sectionFive p{
    margin: 2rem 0;
    color: rgb(85, 84, 84);
}

.sectionFiveBox{
    border: 1px solid rgb(255 208 89);
    background-color: rgb(255 247 227);
    padding: 20px;
    border-radius: 20px;
    transition: all 0.5s;
}

.SectionFiveImgWrapper{
    border: 2px solid rgb(255 208 89);
    background-color: #fff;
    width: fit-content;
    padding: 1rem 1.2rem;
    border-radius: 10px;
}

.sectionFiveBoxH2{
    font-size: 20px !important;
    margin: 1rem 0 !important;
}

.sectionFiveBoxP{
    font-family: 16px !important;
    margin: 1rem 0 !important;
}

.sectionFiveBoxWrapper{
    display: grid;
    grid-template-columns: auto auto;
    gap: 1rem;
}

#sectionSix{
    padding: 3rem;
    text-align: right;
    margin-top: 3rem;
}

#sectionSix h2{
    font-size: 35px;
    font-weight: 600;
}



#sectionSeven{
    display: flex;
    padding: 3rem;
    justify-content: space-between;
}
#sectionSeven img{
    width: 47%;
    margin-left: 20px;
}

form , form div{
    display: flex;
    flex-direction: column;
    align-content: space-evenly;
    justify-content: space-evenly;
    gap: 10px;
}
form{
    width: -webkit-fill-available;;
}

form input{
    height: 40px;
}

form button{
    height: 50px;
    font-size: 18px;
}



@media (max-width : 1177px){
    .card{
        display: block;
    }

    .card img{
        width: 100% !important;
        margin: 3rem auto;
    }
    #sectionSeven img{
        display: none;
    }
}

@media (max-width : 950px){

    .sectionThreeBoxWrapper {
        grid-template-columns: 1fr 1fr;
    }

    .card{
        margin-bottom: 5rem;
    }
    .hero h1{
        font-size: 35px;
    }
}

@media (max-width : 700px) {
    #hamburger{
        display: block;
    }
    nav{
        display: none;
    }
    header button {
        display: none;
    }
    .hero p{
        display: none;

    }
    .hero h1{
        text-align: center;
    }
    .hero{
        justify-content: center;
        display: flex;
        flex-direction: column;
    
    }
    .sectionThreeBoxWrapper {
        grid-template-columns: 1fr ;
    }

    .sectionThreeBoxWrapper h3{
        margin-bottom: 10rem;
    }
    .sectionThreeBox{
        padding: 30px; 
    }
    .sectionOneWrapper {
        background-position-x: left;
    }

    .hero button{
        width: fit-content;
    }
    .hero{
        justify-content: center;
        align-items: center;
    }

    .sectionThreeBoxInvisible{
        display: none;
    }
    .sectionFiveBoxWrapper{
        display: block;
       
    }
    .sectionFiveBox{
        margin-bottom: 20px;
    }

    #floatingBlock{
        padding: 1rem;
    }

    #floatingBlock{
        font-size: 15px;
    }
}

@media (max-width : 500px){
    section{
        padding: 10px !important;
       
    }
    #sectionTwo {
        margin: 10rem 1rem 0 1rem;
    }
}

